# to-trash-old

./: Cargo.toml  README.md
.github/workflows/: check_and_test.yml
c/: strftime.c
src/: error.rs  home.rs  info_file.rs  main.rs  move_file.rs  test.rs  trash.rs
src/ffi/: home.rs  lstat.rs  mod.rs  mount_points.rs  stat.rs  time.rs  time_fmt.rs  user.rs
