[package]
name = "tt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
libc = "0.2.99"
thiserror = "1.0.26"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.2.0"
time = { version = "0.3.1", default-features = false, features = [ "formatting" ] }
rand = { version = "0.8.3", default-features = false, features = ["small_rng", "std"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3